--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "node-ansi-logger": "^1.9.1"
+    "node-ansi-logger": "^1.9.1",
+    "node-persist-manager": "^1.0.3"
   }
 }
