--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,8 +8,5 @@
   "endOfLine": "lf",
   "bracketSpacing": true,
   "arrowParens": "always",
-  "quoteProps": "as-needed",
-  "plugins": [
-    "prettier-plugin-organize-imports"
-  ]
+  "quoteProps": "as-needed"
 }
