--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ replay_pid*
 bridge-info.json
 bridge-devices.json
 bridge-groups.json
+
+# storage
+.matterbridge.json
+.matterbridge.backup.json
+node_storage
