--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,12 +22,12 @@
       ],
     "rules": {
         "prettier/prettier": ["error"],
-        "indent": ["error", 2],
-        "max-len": ["warn", 180],
+        "indent": ["error", 2, { "SwitchCase": 1 }],
+        "max-len": ["warn", 200],
         "no-console": ["warn"],
         "quotes": ["error", "single", { "avoidEscape": true, "allowTemplateLiterals": false }],
         "comma-spacing": ["error", { "before": false, "after": true }],
-        "space-before-function-paren": ["error", { "anonymous": "never", "named": "never", "asyncArrow": "always" }],
+        "space-before-function-paren": ["error", { "anonymous": "always", "named": "never", "asyncArrow": "always" }],
         "keyword-spacing": ["error", { "before": true, "after": true }],
         "no-multi-spaces": "error",
         "object-curly-spacing": ["error", "always"],
