--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "matterbridge",
-  "version": "1.0.6",
+  "version": "1.1.1",
   "description": "Matterbridge",
   "author": "https://github.com/Luligu",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
@@ -20,15 +20,18 @@
     "matter",
     "matter.js"
   ],
+  "bin": {
+    "matterbridge": "./dist/index.js"
+  },
   "engines": {
     "node": "^18.19.0 || ^20.11.0"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "start": "node ./dist/index.js -bridge",
+    "start:bridge": "node ./dist/index.js -bridge",
+    "start:childbridge": "node ./dist/index.js -childbridge",
     "start:help": "node ./dist/index.js -help",
-    "start:add": "node ./dist/index.js -add ../matterbridge-example-accessory-platform && node ./dist/index.js -add ../matterbridge-example-dynamic-platform",
     "test": "jest",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch",
@@ -59,6 +62,7 @@
   "dependencies": {
     "@project-chip/matter-node.js": "^0.7.5",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "node-ansi-logger": "^1.9.1",
     "node-persist-manager": "^1.0.3"
   }
