--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Matterbridge",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -21,7 +21,7 @@
     "matter.js"
   ],
   "bin": {
-    "matterbridge": "./dist/index.js"
+    "matterbridge": "./dist/cli.js"
   },
   "engines": {
     "node": "^18.19.0 || ^20.11.0"
