--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prepublishOnly": "npm run lint && npm run cleanBuild",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u",
-    "updateMatter": "npm install @project-chip/matter.js@dev && npm install @project-chip/matter-node.js@dev && npm install @project-chip/matter.js-tools@dev && npm install @project-chip/matter-node-ble.js@dev"
+    "updateMatter": "npm install @project-chip/matter-node.js@dev"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^1.6.3",
