--- a/package.json
+++ b/package.json
@@ -46,15 +46,16 @@
     "prepublishOnly": "npm run lint && npm run cleanBuild",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u",
-    "updateMatter": "npm install @project-chip/matter-node.js@dev"
+    "updateMatter:latest": "npm install @project-chip/matter-node.js@latest",
+    "updateMatter:dev": "npm install @project-chip/matter-node.js@dev"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^1.6.3",
     "@tsconfig/node-lts": "^20.1.1",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.25",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@types/node": "^20.11.26",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
@@ -63,7 +64,7 @@
   "dependencies": {
     "@project-chip/matter-node.js": "^0.7.5",
     "express": "^4.18.3",
-    "matter-history": "^1.0.9",
+    "matter-history": "^1.0.10",
     "node-ansi-logger": "^1.9.2",
     "node-persist-manager": "^1.0.4"
   }
