--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "start:test": "node ./dist/cli.js -test",
-    "start:bridge": "node ./dist/index.js -bridge",
-    "start:childbridge": "node ./dist/index.js -childbridge",
-    "start:help": "node ./dist/index.js -help",
+    "start:bridge": "matterbridge -bridge",
+    "start:childbridge": "matterbridge -childbridge",
+    "start:help": "matterbridge -help",
     "test": "jest",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch",
