--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Matterbridge",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -64,7 +64,7 @@
   "dependencies": {
     "@project-chip/matter-node.js": "^0.7.5",
     "express": "^4.18.3",
-    "matter-history": "file:../matter-history",
+    "matter-history": "^1.0.11",
     "node-ansi-logger": "^1.9.2",
     "node-persist-manager": "^1.0.4"
   }
