--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tsconfig/node-lts": "^20.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.27",
+    "@types/wtfnode": "^0.7.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint-config-prettier": "^9.1.0",
@@ -66,6 +67,7 @@
     "express": "^4.18.3",
     "matter-history": "^1.0.11",
     "node-ansi-logger": "^1.9.2",
-    "node-persist-manager": "^1.0.4"
+    "node-persist-manager": "^1.0.4",
+    "wtfnode": "^0.9.1"
   }
 }
