--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "express": "^4.18.3",
     "matter-history": "^1.0.11",
     "node-ansi-logger": "^1.9.2",
-    "node-persist-manager": "^1.0.4",
-    "wtfnode": "^0.9.1"
+    "node-persist-manager": "^1.0.4"
   }
 }
