--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start:test": "node ./dist/cli.js -test",
     "start:bridge": "matterbridge -bridge",
     "start:childbridge": "matterbridge -childbridge",
+    "start:controller": "matterbridge -controller",
     "start:help": "matterbridge -help",
     "test": "jest",
     "test:verbose": "jest --verbose",
