--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "dist/index.d.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Luligu/matterbridge"
+    "url": "git+https://github.com/Luligu/matterbridge.git"
   },
   "bugs": {
     "url": "https://github.com/Luligu/matterbridge/issues"
@@ -21,7 +21,7 @@
     "matter.js"
   ],
   "bin": {
-    "matterbridge": "./dist/cli.js"
+    "matterbridge": "dist/cli.js"
   },
   "engines": {
     "node": "^18.19.0 || ^20.11.0"
