--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.1.12",
+  "version": "1.2.0",
   "description": "Matterbridge",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -18,7 +18,8 @@
     "matterbridge",
     "homebridge",
     "matter",
-    "matter.js"
+    "matter.js",
+    "matter-node.js"
   ],
   "bin": {
     "matterbridge": "dist/cli.js"
