--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "matterbridge",
   "version": "1.2.0",
-  "description": "Matterbridge",
+  "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
+  "homepage": "https://github.com/Luligu/matterbridge/blob/main/README.md",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
