--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -20,7 +20,8 @@
     "homebridge",
     "matter",
     "matter.js",
-    "matter-node.js"
+    "matter-node.js",
+    "plugin"
   ],
   "bin": {
     "matterbridge": "dist/cli.js"
@@ -56,7 +57,7 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^1.7.0",
-    "@tsconfig/node-lts": "^20.1.1",
+    "@tsconfig/node-lts": "^20.1.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
