--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "keywords": [
     "matterbridge",
     "homebridge",
+    "bridge",
+    "frontend",
     "matter",
     "matter.js",
     "matter-node.js",
@@ -60,8 +62,8 @@
     "@tsconfig/node-lts": "^20.1.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
@@ -69,7 +71,7 @@
   },
   "dependencies": {
     "@project-chip/matter-node.js": "^0.7.5",
-    "express": "^4.19.1",
+    "express": "^4.19.2",
     "matter-history": "^1.0.12",
     "node-ansi-logger": "^1.9.2",
     "node-persist-manager": "^1.0.6"
