--- a/package.json
+++ b/package.json
@@ -55,7 +55,11 @@
     "updateMatter:latest": "npm run deepClean && npm install @project-chip/matter-node.js@latest && npm install && npm run build",
     "updateMatter:dev": "npm run deepClean && npm install @project-chip/matter-node.js@dev && npm install && npm run build",
     "wtf:install": "npm install wtfnode && npm install @types/wtfnode",
-    "wtf:uninstall": "npm uninstall wtfnode && npm uninstall @types/wtfnode"
+    "wtf:uninstall": "npm uninstall wtfnode && npm uninstall @types/wtfnode",
+    "version": "npm run build",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^1.7.0",
