--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "bugs": {
     "url": "https://github.com/Luligu/matterbridge/issues"
   },
+  "funding": {
+    "type": "buymeacoffee",
+    "url": "https://www.buymeacoffee.com/luligugithub"
+  },
   "keywords": [
     "matterbridge",
     "homebridge",
