--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "matterbridge": "dist/cli.js"
   },
   "engines": {
-    "node": "^18.19.0 || ^20.12.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "build": "tsc",
