--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -69,20 +69,22 @@
     "@stylistic/eslint-plugin": "^1.7.0",
     "@tsconfig/node-lts": "^20.1.3",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.5",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@types/node": "^20.12.7",
+    "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@project-chip/matter-node.js": "^0.8.0",
+    "@project-chip/matter-node.js": "^0.8.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "matter-history": "^1.0.13",
+    "matter-history": "file:../matter-history",
     "node-ansi-logger": "^1.9.3",
-    "node-persist-manager": "^1.0.7"
+    "node-persist-manager": "^1.0.7",
+    "ws": "^8.16.0"
   }
 }
