--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "version:major": "npm version major"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^1.7.0",
+    "@stylistic/eslint-plugin": "^1.7.2",
     "@tsconfig/node-lts": "^20.1.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
@@ -82,8 +82,8 @@
     "@project-chip/matter-node.js": "^0.8.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "matter-history": "file:../matter-history",
-    "node-ansi-logger": "^1.9.3",
+    "matter-history": "^1.0.15",
+    "node-ansi-logger": "^1.9.5",
     "node-persist-manager": "^1.0.7",
     "ws": "^8.16.0"
   }
