--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "start:test": "node ./dist/cli.js -test",
-    "start:bridge": "matterbridge -bridge",
-    "start:childbridge": "matterbridge -childbridge",
-    "start:controller": "matterbridge -controller",
-    "start:help": "matterbridge -help",
+    "start:bridge": "node ./dist/cli.js -bridge",
+    "start:childbridge": "node ./dist/cli.js -childbridge",
+    "start:controller": "node ./dist/cli.js -controller",
+    "start:help": "node ./dist/cli.js -help",
     "test": "jest",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch",
