--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     network_mode: host # Ensures the Matter mdns works
     restart: always # Ensures the container always restarts automatically
     volumes:
-      - matterbridge_plugin:/root/Matterbridge
-      - matterbridge_storage:/root/.matterbridge
+      - plugin:/root/Matterbridge
+      - storage:/root/.matterbridge
 
 volumes:
-  matterbridge_plugin:
-  matterbridge_storage:
+  plugin:
+  storage:
