--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,5 @@ services:
     network_mode: host # Ensures the Matter mdns works
     restart: always # Ensures the container always restarts automatically
     volumes:
-      - plugin:/root/Matterbridge # Volume: matterbridge_plugin
-      - storage:/root/.matterbridge # Vloume: matterbridge_storage
-
-volumes:
-  plugin:
-  storage:
+      - ${HOME}/Matterbridge:/root/Matterbridge 
+      - ${HOME}/.matterbridge:/root/.matterbridge
