Docker final setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     network_mode: host # Ensures the Matter mdns works
     restart: always # Ensures the container always restarts automatically
     volumes:
-      - ${HOME}/Matterbridge:/root/Matterbridge 
-      - ${HOME}/.matterbridge:/root/.matterbridge
+      - "${HOME}/Matterbridge:/root/Matterbridge" # Mounts the Matterbridge plugin directory
+      - "${HOME}/.matterbridge:/root/.matterbridge" # Mounts the Matterbridge storage directory
