--- a/.github/workflows/docker-buildx.yml
+++ b/.github/workflows/docker-buildx.yml
@@ -32,4 +32,11 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         version: latest
-  
+
+    - name: Run Docker Buildx
+      run: |
+        docker buildx build \
+          --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 \
+          -f docker/Dockerfile.test \
+          -t luligu/matterbridge:test \
+          --push .
