--- a/.github/workflows/docker-buildx.yml
+++ b/.github/workflows/docker-buildx.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Run Docker Buildx
       run: |
         docker buildx build \
-          --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 \
+          --platform linux/amd64,linux/arm64,linux/arm/v7 \
           -f docker/Dockerfile.test \
           -t luligu/matterbridge:test \
           --push .
