--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,5 +1,5 @@
-FROM node:20-alpine
-# FROM node:20-bullseye-slim
+# FROM node:20-alpine
+FROM node:20-bullseye-slim
 
 # RUN npm install -g npm
 # FROM alpine:3.18.4 as base
