--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,6 +1,7 @@
-FROM alpine as base
+# FROM alpine as base
+FROM node:20-alpine as base
 WORKDIR /app
-RUN apk add --no-cache nodejs npm git
+# RUN apk add --no-cache nodejs npm git
 
 
 FROM base as builder
