--- a/.github/workflows/docker-buildx.yml
+++ b/.github/workflows/docker-buildx.yml
@@ -38,6 +38,6 @@ jobs:
         docker buildx build \
           --platform linux/amd64,linux/arm64,linux/arm/v7 \
           -f docker/Dockerfile.dev \
-          -t luligu/matterbridge:test \
+          -t luligu/matterbridge:dev \
           --push .
-        docker manifest inspect luligu/matterbridge:test
+        docker manifest inspect luligu/matterbridge:dev
