--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -4,7 +4,10 @@ WORKDIR /app
 
 FROM base as builder
 WORKDIR /app
-COPY ./package.json ./tsconfig.json ./src ./frontend/build ./
+COPY ./package.json ./
+COPY ./tsconfig.json ./
+COPY ./src ./src
+COPY ./frontend/build ./frontend/build
 RUN npm install && npm run build && npm link
 
 
