--- a/.github/workflows/docker-buildx-main.yml
+++ b/.github/workflows/docker-buildx-main.yml
@@ -37,7 +37,8 @@ jobs:
       run: |
         docker buildx build \
           --platform linux/amd64,linux/arm64,linux/arm/v7 \
-          -f docker/Dockerfile.test \
-          -t luligu/matterbridge:test \
+          -f docker/Dockerfile.main \
+          -t luligu/matterbridge:latest \
+          -t luligu/matterbridge:1.2.13 \
           --push .
         docker manifest inspect luligu/matterbridge:test
