--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,23 +1,11 @@
-FROM alpine:latest as base
-WORKDIR /app
+FROM node:20-alpine
 
-# Install Node.js and npm
-RUN apk add --update nodejs npm
-
-FROM base as builder
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci && npm run build
-
-
-FROM base as release
-WORKDIR /app
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/frontend/build ./frontend/build
+RUN npm ci
+RUN npm run build
 RUN npm link
 
 # Install Matterbridge plugins
