--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,10 +1,16 @@
+# syntax=docker/dockerfile:1.2
+ARG BUILDPLATFORM
+ARG TARGETPLATFORM
+
 FROM node:20-alpine
+
+RUN echo "Building on $BUILDPLATFORM for $TARGETPLATFORM"
 
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci
+RUN npm install
 RUN npm run build
 RUN npm link
 
