--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -9,7 +9,7 @@ COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
 RUN apk add --no-cache --virtual .buildtools make gcc g++ python3 linux-headers git npm && \
-    npm ci --production --no-audit --no-optional --no-update-notifier && \
+    npm ci --no-audit --no-optional --no-update-notifier && \
     npm run build && \
     npm link && \
     apk del .buildtools
