--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -9,8 +9,8 @@ COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
 # RUN apk add --no-cache --virtual .buildtools make gcc g++ python3 linux-headers git npm && \
-RUN apk add --no-cache --virtual .buildtools git npm && \
-    npm ci --no-audit --no-optional --omit=optional --no-update-notifier && \
+RUN apk add --no-cache --virtual .buildtools npm && \
+    npm ci --no-audit --omit=optional --no-update-notifier && \
     npm run build && \
     npm link && \
     apk del .buildtools
