--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,7 +1,8 @@
-FROM alpine:3.18.4 as base
+FROM alpine:latest as base
 
 WORKDIR /app
-RUN apk add --no-cache nodejs npm
+RUN apk add --no-cache nodejs npm icu-data-full
+ENV NODE_ICU_DATA=/usr/lib/node_modules/full-icu
 
 FROM base as builder
 
