--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -9,12 +9,11 @@ FROM base as builder
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-# RUN apk add --no-cache --virtual .buildtools make gcc g++ python3 linux-headers git npm && \
-RUN apk add --no-cache --virtual .buildtools npm && \
-    npm ci --no-audit --omit=optional --no-update-notifier && \
+# RUN apk add --no-cache --virtual .buildtools make gcc g++ python3 linux-headers git npm && \apk del .buildtools
+RUN npm ci --no-audit --no-update-notifier && \
     npm run build && \
-    npm link && \
-    apk del .buildtools
+    npm link
+    
 
 # Install Matterbridge plugins
 RUN npm -g install matterbridge-example-accessory-platform
