--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -1,8 +1,9 @@
-# FROM alpine:3.18.4 as base
-FROM node:20-alpine as base
+FROM alpine:3.18.4 as base
+# FROM node:20-alpine as base
 
 WORKDIR /app
 RUN apk add --no-cache nodejs npm icu-data-full
+# RUN npm install -g npm@10.7.0
 
 FROM base as builder
 
@@ -17,13 +18,13 @@ RUN npm ci --no-audit --no-update-notifier --verbose && \
 # Install Matterbridge plugins
 RUN npm -g install matterbridge-example-accessory-platform
 RUN npm -g install matterbridge-example-dynamic-platform
-# RUN npm -g install matterbridge-zigbee2mqtt
-# RUN npm -g install matterbridge-somfy-tahoma
-# RUN npm -g install matterbridge-eve-door
-# RUN npm -g install matterbridge-eve-motion
-# RUN npm -g install matterbridge-eve-energy
-# RUN npm -g install matterbridge-eve-room
-# RUN npm -g install matterbridge-eve-weather
+RUN npm -g install matterbridge-zigbee2mqtt
+RUN npm -g install matterbridge-somfy-tahoma
+RUN npm -g install matterbridge-eve-door
+RUN npm -g install matterbridge-eve-motion
+RUN npm -g install matterbridge-eve-energy
+RUN npm -g install matterbridge-eve-room
+RUN npm -g install matterbridge-eve-weather
 
 WORKDIR /app
 CMD ["node", "dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
