--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -31,5 +31,8 @@ RUN npm -g install matterbridge-eve-room
 RUN npm -g install matterbridge-eve-weather
 
 WORKDIR /app
+ENV PATH /usr/local/bin:$PATH
+ENV PATH /usr/bin:$PATH
+
 # CMD ["node", "dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
 CMD ["matterbridge", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
