--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -12,12 +12,13 @@ COPY ./src ./src
 COPY ./frontend/build ./frontend/build
 RUN npm ci --no-audit --no-update-notifier --verbose && \
     npm run build && \
-    npm -g install ./ && \
-    rm ./package.json ./package-lock.json ./tsconfig.json && \
-    rm -rf ./src && \
-    rm -rf ./frontend && \
-    rm -rf ./dist && \
-    rm -rf ./node_modules
+    npm -g install ./ 
+    # && \
+    # rm ./package.json ./package-lock.json ./tsconfig.json && \
+    # rm -rf ./src && \
+    # rm -rf ./frontend && \
+    # rm -rf ./dist && \
+    # rm -rf ./node_modules
 
 # Install Matterbridge plugins
 RUN npm -g install matterbridge-example-accessory-platform
@@ -31,8 +32,8 @@ RUN npm -g install matterbridge-eve-room
 RUN npm -g install matterbridge-eve-weather
 
 WORKDIR /app
-ENV PATH /usr/local/bin:$PATH
-ENV PATH /usr/bin:$PATH
+# ENV PATH /usr/local/bin:$PATH
+# ENV PATH /usr/bin:$PATH
 
-# CMD ["node", "dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
-CMD ["matterbridge", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
+CMD ["node", "dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
+# CMD ["matterbridge", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
