--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -12,13 +12,12 @@ COPY ./src ./src
 COPY ./frontend/build ./frontend/build
 RUN npm ci --no-audit --no-update-notifier --verbose && \
     npm run build && \
-    npm -g install ./ 
-    # && \
-    # rm ./package.json ./package-lock.json ./tsconfig.json && \
-    # rm -rf ./src && \
-    # rm -rf ./frontend && \
-    # rm -rf ./dist && \
-    # rm -rf ./node_modules
+    npm -g install ./ && \
+    rm ./package.json ./package-lock.json ./tsconfig.json && \
+    rm -rf ./src && \
+    rm -rf ./frontend && \
+    rm -rf ./dist && \
+    rm -rf ./node_modules
 
 # Install Matterbridge plugins
 RUN npm -g install matterbridge-example-accessory-platform
@@ -34,8 +33,8 @@ RUN npm -g install matterbridge-eve-weather
 WORKDIR /app
 # ENV PATH /usr/local/bin:$PATH
 # ENV PATH /usr/bin:$PATH
-# /usr/local/lib/node_modules/matterbridge/dist/cli.js
-# /usr/local/bin/matterbridge
+# Node modules: /usr/local/lib/node_modules/matterbridge/dist/cli.js
+# Bin: /usr/local/bin/matterbridge
 # CMD ["node", "/usr/local/lib/node_modules/matterbridge/dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
 # CMD ["node", "dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
 CMD ["/usr/local/bin/matterbridge", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
