--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -1,11 +1,12 @@
 FROM alpine:3.18.4 as base
-# FROM node:20-alpine as base
+# FROM alpine:latest as base not working
+# FROM node:20-alpine as base not working
 
 WORKDIR /app
 RUN apk add --no-cache nodejs npm icu-data-full
 # RUN npm install -g npm@10.7.0
 
-FROM base as builder
+# FROM base as builder
 
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
@@ -21,21 +22,17 @@ RUN npm ci --no-audit --no-update-notifier --verbose && \
     #rm -rf ./node_modules
 
 # Install Matterbridge plugins
-RUN npm -g install matterbridge-example-accessory-platform
-RUN npm -g install matterbridge-example-dynamic-platform
-RUN npm -g install matterbridge-zigbee2mqtt
-RUN npm -g install matterbridge-somfy-tahoma
-RUN npm -g install matterbridge-eve-door
-RUN npm -g install matterbridge-eve-motion
-RUN npm -g install matterbridge-eve-energy
-RUN npm -g install matterbridge-eve-room
-RUN npm -g install matterbridge-eve-weather
+# RUN npm -g install matterbridge-example-accessory-platform
+# RUN npm -g install matterbridge-example-dynamic-platform
+# RUN npm -g install matterbridge-zigbee2mqtt
+# RUN npm -g install matterbridge-somfy-tahoma
+# RUN npm -g install matterbridge-eve-door
+# RUN npm -g install matterbridge-eve-motion
+# RUN npm -g install matterbridge-eve-energy
+# RUN npm -g install matterbridge-eve-room
+# RUN npm -g install matterbridge-eve-weather
 
-WORKDIR /app
-# ENV PATH /usr/local/bin:$PATH
-# ENV PATH /usr/bin:$PATH
+# WORKDIR /app
 # Node modules: /usr/local/lib/node_modules/matterbridge/dist/cli.js
 # Bin: /usr/local/bin/matterbridge
-# CMD ["node", "/usr/local/lib/node_modules/matterbridge/dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
-# CMD ["node", "dist/cli.js", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
 CMD ["/usr/local/bin/matterbridge", "-bridge", "-docker", "-frontend", "8283", "-port", "5550"]
